@@ -1,14 +1,17 @@
 \name{make.mpt.cf}
 \alias{make.mpt.cf}
+\alias{lbmpt.to.mpt}
 \title{
-Function to transfom MPT models.
+Functions to transfom MPT models.
 }
 \description{
-(Helper) function that takes an MPT model file and transforms it into a representation in the context-free language of MPT models L-BMPT (Purdy & Batchelder, 2009).
+(Helper) functions that takes an MPT model file and transforms it into a representation in the context-free language of MPT models L-BMPT (Purdy & Batchelder, 2009) or takes the represetation in LBMPT and returns the model equations.
 }
 
 \usage{
-make.mpt.cf(model.filename, model.type = c("easy", "eqn"))
+make.mpt.cf(model.filename, model.type = c("easy", "eqn"), treewise = FALSE)
+
+lbmpt.to.mpt(model.list, outfile = NULL)
 }
 
 \arguments{
@@ -17,6 +20,15 @@ A character \code{vector} specifying the location and name of the model file.
 }
   \item{model.type}{
 Character vector specifying whether the model file is formatted in the \code{easy} format (\code{"easy"}; i.e., each line represents all branches corresponding to a response categories) or the traditional EQN syntax (\code{"eqn"} or \code{"eqn2"}). See Details in \code{\link{fit.mpt}}.
+}
+  \item{treewise}{
+  logical. Should the model be concatenated to one tree before transforming to LBMPT? Default is \code{FALSE}.
+}
+  \item{model.list}{
+  A list of character \code{vector}s representing a model in LBMPT. Each element of the vector corresponds to either a parameter or category. Each list element corresponds to one tree. Can be returned from \code{make.mpt.cf}.
+}
+  \item{outfile}{
+  Name of the file the model equation should be saved in (in easy format). If \code{NULL} (the default) prints it to the console instead (\code{stdout()}).
 }
 }
 \details{
@@ -28,13 +40,15 @@ There are three important things to know about this function:
 Theta: Names that are legal variable names in R.\cr
 C: Integers.
 
-2. If a model consists of more than n > 1 trees, this function concatenates the trees into a single binary MPT model by adding n-1 parameters (named \code{hank.join.x} with \code{x} be a integer starting at 1; see Wu, Myung & Batchelder, 2010).
+2. If a model consists of more than n > 1 trees, this function per default concatenates the trees into a single binary MPT model by adding n-1 parameters (named \code{hank.join.x} with \code{x} be a integer starting at 1; see Wu, Myung & Batchelder, 2010). This can be turned off, by setting \code{treewise} to TRUE.
 
 3. It is absolutely necessary that the representation of the model via equations in the model file exactly maps on the structure of the binary tree. In other words, equations in the model file can NOT be simplified in any way. The equations in the model file may only consist of the parameters and their negations (e.g. \code{d} and \code{(1-d)}). Simplifications and aggregations in the model file (e.g., from \code{u * (1-u) + u * (1-u)} to \code{2*u*(1-u}) will lead to erroneous results! Similarly, reparameterizations for inequality constraints (which can be done by \code{fit.mpt}) can not be represented in L-BMPT.
 
 }
 \value{
-A character vector with each element representing either a parameter or a category (categories are represented by integer numbers).
+\code{make.mpt.cf}: A character vector with each element representing either a parameter or a category (categories are represented by integer numbers). In case of multiple trees and \code{treewise = TRUE}, a list of such vectors.
+
+\code{lbmpt.to.mpt}: Either prints the model to the screen or returns nothing and saves the model equations in the specified file.
 }
 \references{
 Purdy, B. P., & Batchelder, W. H. (2009). A context-free language for binary multinomial processing tree models. \emph{Journal of Mathematical Psychology}, 53, 547-561.
@@ -44,7 +58,7 @@ Riefer, D. M., & Batchelder, W. H. (1988). Multinomial modeling and the measurem
 Wu, H., Myung, J., I., & Batchelder, William, H. (2010). Minimum description length model selection of multinomial processing tree models. \emph{Psychonomic Bulletin & Review}, 17, 275-286.
 }
 \author{
-Henrik Singmann
+Henrik Singmann, Quentin Gronau, and Franz Dietrich
 }
 \note{
 It is absolutely necessary that the model file exactly maps on the structure of the binary tree. See Details.
@@ -62,5 +76,8 @@ model2 <- system.file("extdata", "rb.fig2.model", package = "MPTinR")
 
 make.mpt.cf(model2)
 
+make.mpt.cf(model2, treewise = TRUE)
+  
+lbmpt.to.mpt(make.mpt.cf(model2, treewise = TRUE))
 }
 
